# Vaxi

./: CMakeLists.txt  README.md
src/: definitions.cpp  definitions.h  init.cpp  init.h  input.cpp  input.h  main.cpp  parse_and_execute.cpp  parse_and_execute.h  process.cpp  process.h
